# FM_adem

./: .gitignore  Dockerfile  pyproject.toml
src/adem/: celery_config.py  db.py  dependencies.py  logger.py  main.py  models.py  query_config.json  repository.py  schemas.py  service.py
src/adem/logs/: log.jsonl
